--- a/WebSales/appsettings.json
+++ b/WebSales/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebSalesContext": "Server=(localdb)\\mssqllocaldb;Database=WebSalesContext-732d3a27-610c-4508-8bdd-a36f448f5ebf;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
