Adaptação ao SQL

--- a/WebSales/appsettings.json
+++ b/WebSales/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebSalesContext": "Server=(localdb)\\mssqllocaldb;Database=WebSalesContext-732d3a27-610c-4508-8bdd-a36f448f5ebf;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WebSalesContext": "server=localhost;userid=developer;password=1234567;database=websalesmvcappdb"
   }
 }
